WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100781
Regression(
r132887
): Caused segfault in a EWK2UnitTestBase.ewk_view_text_find
https://bugs.webkit.org/show_bug.cgi?id=100781
Summary
Regression(r132887): Caused segfault in a EWK2UnitTestBase.ewk_view_text_find
Chris Dumez
Reported
2012-10-30 12:40:45 PDT
http://trac.webkit.org/changeset/132887
is causing the following unit test to segfault: EWK2UnitTestBase.ewk_view_text_find
Attachments
Patch
(1.63 KB, patch)
2012-10-30 12:44 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(1.62 KB, patch)
2012-10-30 12:47 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-10-30 12:44:47 PDT
Created
attachment 171504
[details]
Patch
Chris Dumez
Comment 2
2012-10-30 12:46:34 PDT
Here was the backtrace: Program received signal SIGSEGV, Segmentation fault. 0x0000000000449ffe in onTextFound (userData=0x7fffffffdee4, eventInfo=0x0) at /home/chris/unencrypted/WebKit/Source/WebKit2/UIProcess/API/efl/tests/test_ewk2_view.cpp:591 591 *result = *matchCount; (gdb) bt 25 #0 0x0000000000449ffe in onTextFound (userData=0x7fffffffdee4, eventInfo=0x0) at /home/chris/unencrypted/WebKit/Source/WebKit2/UIProcess/API/efl/tests/test_ewk2_view.cpp:591 #1 0x00007ffff7ebc3b3 in evas_object_smart_callback_call (obj=0x532da0, event=<optimized out>, event_info=0x0) at evas_object_smart.c:610 #2 0x00007ffff7a205fd in EwkViewCallbacks::CallBack<(EwkViewCallbacks::CallbackType)19>::call (this=0x7fffffffd340, argument=0x0) at /home/chris/unencrypted/WebKit/Source/WebKit2/UIProcess/API/efl/EwkViewCallbacks.h:127 #3 0x00007ffff7a2043a in WebKit::FindClientEfl::didFailToFindString (clientInfo=0x5133c0) at /home/chris/unencrypted/WebKit/Source/WebKit2/UIProcess/efl/FindClientEfl.cpp:51 #4 0x00007ffff78741ad in WebKit::WebFindClient::didFailToFindString (this=0x724b20, page=0x7247e0, string=...) at /home/chris/unencrypted/WebKit/Source/WebKit2/UIProcess/WebFindClient.cpp:47 #5 0x00007ffff78997ac in WebKit::WebPageProxy::didFailToFindString (this=0x7247e0, string=...) at /home/chris/unencrypted/WebKit/Source/WebKit2/UIProcess/WebPageProxy.cpp:2959 #6 0x00007ffff7a51e47 in CoreIPC::callMemberFunction<WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(WTF::String const&), WTF::String> (args=..., object=0x7247e0, function= (void (WebKit::WebPageProxy::*)(WebKit::WebPageProxy * const, const WTF::String &)) 0x7ffff789977e <WebKit::WebPageProxy::didFailToFindString(WTF::String const&)>) at /home/chris/unencrypted/WebKit/Source/WebKit2/Platform/CoreIPC/HandleMessage.h:21 #7 0x00007ffff7a4fba9 in CoreIPC::handleMessage<Messages::WebPageProxy::DidFailToFindString, WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)(WTF::String const&)> (decoder=..., object=0x7247e0, function= (void (WebKit::WebPageProxy::*)(WebKit::WebPageProxy * const, const WTF::String &)) 0x7ffff789977e <WebKit::WebPageProxy::didFailToFindString(WTF::String const&)>) at /home/chris/unencrypted/WebKit/Source/WebKit2/Platform/CoreIPC/HandleMessage.h:322 #8 0x00007ffff7a4c342 in WebKit::WebPageProxy::didReceiveWebPageProxyMessage (this=0x7247e0, messageID=..., decoder=...) at /home/chris/unencrypted/WebKit/WebKitBuild/Debug/DerivedSources/WebKit2/WebPageProxyMessageReceiver.cpp:422 #9 0x00007ffff7893d57 in WebKit::WebPageProxy::didReceiveMessage (this=0x7247e0, connection=0x721210, messageID=..., decoder=...) at /home/chris/unencrypted/WebKit/Source/WebKit2/UIProcess/WebPageProxy.cpp:1868 #10 0x00007ffff78cfb63 in WebKit::WebProcessProxy::didReceiveMessage (this=0x540b70, connection=0x721210, messageID=..., decoder=...) at /home/chris/unencrypted/WebKit/Source/WebKit2/UIProcess/WebProcessProxy.cpp:435 #11 0x00007ffff78523bf in WebKit::WebConnectionToWebProcess::didReceiveMessage (this=0x71fce0, connection=0x721210, messageID=..., decoder=...) at /home/chris/unencrypted/WebKit/Source/WebKit2/UIProcess/WebConnectionToWebProcess.cpp:79 #12 0x00007ffff77ca2c0 in CoreIPC::Connection::dispatchMessage (this=0x721210, messageID=..., decoder=...) at /home/chris/unencrypted/WebKit/Source/WebKit2/Platform/CoreIPC/Connection.cpp:659 #13 0x00007ffff77ca3f9 in CoreIPC::Connection::dispatchMessage (this=0x721210, message=...) at /home/chris/unencrypted/WebKit/Source/WebKit2/Platform/CoreIPC/Connection.cpp:682 #14 0x00007ffff77ca595 in CoreIPC::Connection::dispatchOneMessage (this=0x721210) at /home/chris/unencrypted/WebKit/Source/WebKit2/Platform/CoreIPC/Connection.cpp:708 #15 0x00007ffff77d46ea in WTF::FunctionWrapper<void (CoreIPC::Connection::*)()>::operator() (this=0x7fff9c0020d0, c=0x721210) at /home/chris/unencrypted/WebKit/Source/WTF/wtf/Functional.h:174 #16 0x00007ffff77d44f0 in WTF::BoundFunctionImpl<WTF::FunctionWrapper<void (CoreIPC::Connection::*)()>, void (CoreIPC::Connection*)>::operator()() (this=0x7fff9c0020c0) at /home/chris/unencrypted/WebKit/Source/WTF/wtf/Functional.h:406 #17 0x00000000004742e4 in WTF::Function<void ()>::operator()() const (this=0x7fffffffdd50) at /home/chris/unencrypted/WebKit/Source/WTF/wtf/Functional.h:614 #18 0x00007ffff2dee2de in WebCore::RunLoop::performWork (this=0x5223b0) at /home/chris/unencrypted/WebKit/Source/WebCore/platform/RunLoop.cpp:102 #19 0x00007ffff37a95b3 in WebCore::RunLoop::wakeUpEvent (data=0x5223b0) at /home/chris/unencrypted/WebKit/Source/WebCore/platform/efl/RunLoopEfl.cpp:100 #20 0x00007ffff7fd8751 in _ecore_pipe_read (data=0x4d3f20, fd_handler=<optimized out>) at ecore_pipe.c:625 #21 0x00007ffff7fd76a1 in _ecore_call_fd_cb (data=<optimized out>, func=<optimized out>, fd_handler=0x4d4620) at ecore_private.h:343 #22 _ecore_main_fd_handlers_call () at ecore_main.c:1648 #23 _ecore_main_loop_iterate_internal (once_only=1) at ecore_main.c:1895 #24 0x00007ffff7fd7b45 in ecore_main_loop_iterate () at ecore_main.c:867
Chris Dumez
Comment 3
2012-10-30 12:47:48 PDT
Created
attachment 171506
[details]
Patch Fixed title
WebKit Review Bot
Comment 4
2012-10-30 15:53:13 PDT
Comment on
attachment 171506
[details]
Patch Clearing flags on attachment: 171506 Committed
r132951
: <
http://trac.webkit.org/changeset/132951
>
WebKit Review Bot
Comment 5
2012-10-30 15:53:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug